--- a/index.html
+++ b/index.html
@@ -56,23 +56,24 @@
 document.addEventListener('DOMContentLoaded', () => {
     const stages = [
     "Сбор ТЗ",
-    "Создание КП",
-    "Создание ТЗ",
-    "Архивы с документами договора и формой предоставления информации",
+    "Заполнение КП",
+    "Заполнение ТП",
+    "Проверка документов для инициирования(договор + формы предоставления информации)",
     "Публикация закупки",
-    "Сбор первичного этапа",
+    "Первичный сбор предложений",
+    "Создание папки ТКП и выгрузка предложений с КИМ",
     "Объявление переторжки",
     "Сбор предложений с переторжки",
-    "Создание ПБС",
+    "Создание папки переторжка и выгрузка предложений с переторжки",
+    "Создание расчета ПБС",
     "Заполнение формуляра",
-    "Загрузка формуляра",
-    "Получение первичной заявки",
-    "Получение сводной заявки",
+    "Загрузка формуляра в SAP",
+    "Записываем номер первичной заявки",
+    "Получаем номер сводной заявки",
     "Создание НПП",
     "Редактирование формата НПП",
-    "Подписывание НПП у А. Н. Дербуша",
+    "Подписывание НПП у начальника ОМТО",
     "Подписывание НПП у директора",
-    "Забирание НПП из приемной",
     "Отправка НПП на согласование в ГО",
     "НПП согласовано",
     "Создание сводного лота",
@@ -80,12 +81,11 @@ document.addEventListener('DOMContentLoaded', () => {
     "Утверждение сводного лота",
     "Записываем номер сводного лота",
     "Заполняем документы и отправляем в ПЭО",
-    "ПЭО согласовал",
-    "Отправляем анкету к С. Э. Князяну",
+    "ПЭО согласовано",
+    "Проверка на должную осмотрительность",
     "Должная осмотрительность пройдена",
     "Запрос справки обоснования + расчета",
-    "Отдать обоснование + расчет на подпись директору",
-    "Забрать справку обоснование + расчет",
+    "Согласованное обоснование + расчет директором",
     "Создать свод решеинй к ЗК",
     "Загрузить в папку с ЗК МТР документы по закупке",
     "ЗК пройдено",
